-Sidebar inside Target Market Builder now closer resembles the spec -Added state links for Martin's new pages -Fixed up some CSS in the header/added profile image -Fixed an issue where subnav animation got truncated due to overwriting ui-router states Review Request 2186

--- a/le-ui/projects/prospectdiscovery/app/app.scss
+++ b/le-ui/projects/prospectdiscovery/app/app.scss
@@ -3,6 +3,7 @@
 @import "jobs/import/ready/ReadyStyles";
 @import "builder/BuilderStyles";
 @import "builder/category/CategoryStyles";
+@import "builder/prospects/ProspectsSettingsStyles";
 @import "markets/MarketsStyles";
 @import "markets/prospect/ProspectsStyles";
 @import "navigation/sidebar/SidebarStyles";
@@ -34,6 +35,15 @@ body {
 }
 
 /* hack for demo, until the framework is updated */
+table th {
+    background: #d0d0d0;
+    color: #000;
+    padding: 1em;
+}
+table td {
+    color: #000;
+    padding: 1em;
+}
 h4 {
     font-size: 200%;
 }
