--- a/le-ui/projects/prospectdiscovery/app/header/HeaderStyles.scss
+++ b/le-ui/projects/prospectdiscovery/app/header/HeaderStyles.scss
@@ -16,38 +16,27 @@
         a.logo {
             padding: 5px 0;
         }
-        ul.nav-pills {
-            text-align: right;
-            padding: 0;
-            margin: 0;
-            height: 100%;
+        
+        #toggleNav {
+            padding: 1em;
+        }
 
-            li {
-                height: 100%;
+        .pd-header-dropdown-container {
+
+            span {
+                color: black;
             }
 
-            a {
-                height: 100%;
-                padding: 1.4em;
-                color: #333;
-                font-size: 16px;
-                transition: all 220ms ease, border 0 linear;
+            .pd-header-avatar {
+                background: #ccc;
+                border-radius: 50%;
+                padding: 6px 7px;
+                font-size: 1.3em;
             }
-        }
-        .nav-pills li:hover a {
-            background: #e7e7e7;
-        }
-        .nav-pills li.active a {
-            background: transparent;
-            padding-top: 1em;
-            margin-top: 0;
-            border-top: .4em solid #f16a22;
-            color: #629acc;
-            border-radius: 0;
-        }
-        .nav-pills > li {
-            display: inline-block;
-            float: none;
+
+            .pd-header-username {
+                margin: 0 .5em;
+            }
         }
     }
 }
