--- a/le-ui/projects/prospectdiscovery/app/navigation/sidebar/SidebarStyles.scss
+++ b/le-ui/projects/prospectdiscovery/app/navigation/sidebar/SidebarStyles.scss
@@ -40,4 +40,10 @@
         width: 1.4em;
         text-align: center;
     }
+
+    .pd-sidebar-accordion-list {
+        max-height: 10em;
+        overflow: auto;
+
+    }
 }
